infrastructure/platform/messaging/kafka/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-kafka-from-apps
  namespace: mrun-messaging

spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: mrun-kafka

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mrun-apps

      ports:
        - protocol: TCP
          port: 9092
